# desafio-tecnico-maravi

./: .gitignore  README.md  docker-compose.yml
backend/: .env  .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule.bak  celerybeat-schedule.dir  database.db  pyproject.toml
backend/src/: app.py  celery_app.py  config.py  create_db.py  database.py  entrypoint.sh  linhas_municipais.json  models.py  schemas.py  security.py
backend/src/routes/: auth.py  buses.py  notifications.py
backend/src/services/: notification_services.py
backend/src/tasks/: bus_data.py  bus_data_tasks.py  manager_tasks.py  notification_tasks.py
backend/src/utils/: populate_municipal_lines.py  travel_time_utils.py
frontend/: .env  .env.example  Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/Pages/: Home.jsx  MyLocals.jsx  MyNotifications.jsx
frontend/src/Pages/SignIn/: SingInPage.jsx
frontend/src/Pages/SignUp/: SignUpPage.jsx
frontend/src/components/: AuthRoute.jsx  BusList.jsx  LeafletMap.jsx  Logout.jsx  NavBar.jsx
frontend/src/hooks/: useQuickIn.jsx  useQuickout.jsx
frontend/src/styles/: GlobalStyles.js  Variables.js
