[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Luís Felipe <lsb.dev@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
httpx = "^0.28.1"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.11.0"
python-multipart = "^0.0.20"
pydantic = {extras = ["email"], version = "^2.11.9"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"